A lot of refactor
- Event player.registered works
- Save db by document type
- Inheritance class model
- Static data flow
